Fixed images for swords being weird and stretched out

--- a/app/public/stylesheets/style.css
+++ b/app/public/stylesheets/style.css
@@ -22,7 +22,8 @@ a {
 }
 
 .card img {
-    height:500px;
+    max-height:500px;
+    max-width: 121px;
 }
 
 .price {
